tests/marouter/errors/format/testsuite.marouter
# Errors in VMR-files
vm

# Errors in OR-format
o


